Implement comprehensive room ledger system with financial aggregation
- Enhanced Transaction entity with transaction types (PAYMENT, CHARGE, REFUND, FEE, DEPOSIT)
- Added transaction categories, running balance tracking, reference numbers, and notes
- Updated TransactionService with proper ledger management and balance calculations
- Enhanced FinancialService with detailed reporting and room ledger summaries
- Added new financial dashboard with total payments, charges, and room statistics
- Created dedicated room ledger page with complete transaction history
- Enhanced room view with color-coded transaction display and running balances
- Added comprehensive CSV export with all transaction details
- All room ledgers automatically aggregate into the main financial dashboard